@@ -29,8 +29,171 @@ static char THIS_FILE[] = __FILE__;
 
 using namespace ThemeColor;
 
-/////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////
+//
+// StyleHeaderCtrl
+//
+IMPLEMENT_DYNAMIC(StyleHeaderCtrl,CMFCHeaderCtrl);
+
+StyleHeaderCtrl::StyleHeaderCtrl()
+{
+}
+
+StyleHeaderCtrl::~StyleHeaderCtrl()
+{
+}
+
+void 
+StyleHeaderCtrl::OnDrawItem(CDC* pDC,int iItem,CRect rect,BOOL bIsPressed,BOOL bIsHighlighted)
+{
+  int bgColor = ThemeColor::GetColor(Colors::ColorButtonBackground);
+  int txColor = ThemeColor::GetColor(Colors::ColorButtonText);
+  if(bIsHighlighted)
+  {
+    bgColor = ThemeColor::GetColor(Colors::ColorControlHover);
+    txColor = ThemeColor::GetColor(Colors::ColorControlTextHover);
+  }
+  else if(bIsPressed)
+  {
+    bgColor = ThemeColor::GetColor(Colors::ColorControlPressed);
+    txColor = RGB(0,0,0);
+  }
+
+  pDC->FillSolidRect(rect,bgColor);
+  // CMFCHeaderCtrl::OnDrawItem(pDC,iItem,rect,bIsPressed,bIsHighlighted);
+
+  ASSERT_VALID(this);
+  ASSERT_VALID(pDC);
+
+  const int nTextMargin = 5;
+
+  if(iItem < 0)
+  {
+    return;
+  }
+
+  int nSortVal = 0;
+  if(m_mapColumnsStatus.Lookup(iItem,nSortVal) && nSortVal != 0)
+  {
+    // Draw sort arrow:
+    CRect rectArrow = rect;
+    rectArrow.DeflateRect(5,5);
+    rectArrow.left = rectArrow.right - rectArrow.Height();
+
+    if(bIsPressed)
+    {
+      rectArrow.right++;
+      rectArrow.bottom++;
+    }
+
+    rect.right = rectArrow.left - 1;
+
+    int dy2 = (int) (.134 * rectArrow.Width());
+    rectArrow.DeflateRect(0,dy2);
+
+    m_bAscending = nSortVal > 0;
+    OnDrawSortArrow(pDC,rectArrow);
+  }
+
+  HD_ITEM hdItem;
+  memset(&hdItem,0,sizeof(hdItem));
+  hdItem.mask = HDI_FORMAT | HDI_BITMAP | HDI_TEXT | HDI_IMAGE;
+
+  TCHAR szText[256];
+  hdItem.pszText = szText;
+  hdItem.cchTextMax = 255;
+
+  if(!GetItem(iItem,&hdItem))
+  {
+    return;
+  }
+
+  // Draw bitmap and image:
+  if((hdItem.fmt & HDF_IMAGE) && hdItem.iImage >= 0)
+  {
+    // The column has a image from imagelist:
+    CImageList* pImageList = GetImageList();
+    if(pImageList != NULL)
+    {
+      int cx = 0;
+      int cy = 0;
+
+      VERIFY(::ImageList_GetIconSize(*pImageList,&cx,&cy));
+
+      CPoint pt = rect.TopLeft();
+      pt.x++;
+      pt.y = (rect.top + rect.bottom - cy) / 2;
+
+      VERIFY(pImageList->Draw(pDC,hdItem.iImage,pt,ILD_NORMAL));
+
+      rect.left += cx;
+    }
+  }
+
+  if((hdItem.fmt & (HDF_BITMAP | HDF_BITMAP_ON_RIGHT)) && hdItem.hbm != NULL)
+  {
+    CBitmap* pBmp = CBitmap::FromHandle(hdItem.hbm);
+    ASSERT_VALID(pBmp);
+
+    BITMAP bmp;
+    pBmp->GetBitmap(&bmp);
+
+    CRect rectBitmap = rect;
+    if(hdItem.fmt & HDF_BITMAP_ON_RIGHT)
+    {
+      rectBitmap.right--;
+      rect.right = rectBitmap.left = rectBitmap.right - bmp.bmWidth;
+    }
+    else
+    {
+      rectBitmap.left++;
+      rect.left = rectBitmap.right = rectBitmap.left + bmp.bmWidth;
+    }
+
+    rectBitmap.top += max(0,(rectBitmap.Height() - bmp.bmHeight) / 2);
+    rectBitmap.bottom = rectBitmap.top + bmp.bmHeight;
+
+    pDC->DrawState(rectBitmap.TopLeft(),rectBitmap.Size(),pBmp,DSS_NORMAL);
+  }
+
+  // Draw text:
+  if((hdItem.fmt & HDF_STRING) && hdItem.pszText != NULL)
+  {
+    CRect rectLabel = rect;
+    rectLabel.DeflateRect(nTextMargin,0);
+
+    CString strLabel = hdItem.pszText;
+
+    UINT uiTextFlags = DT_VCENTER | DT_SINGLELINE | DT_END_ELLIPSIS | DT_NOPREFIX;
+    if(hdItem.fmt & HDF_CENTER)
+    {
+      uiTextFlags |= DT_CENTER;
+    }
+    else if(hdItem.fmt & HDF_RIGHT)
+    {
+      uiTextFlags |= DT_RIGHT;
+    }
+
+    pDC->SetTextColor(txColor);
+    pDC->DrawText(strLabel,rectLabel,uiTextFlags);
+  }
+}
+
+void 
+StyleHeaderCtrl::OnFillBackground(CDC* pDC)
+{
+  CRect client;
+  GetClientRect(client);
+  int bkcolor = RGB(0,0,0); // ThemeColor::GetColor(Colors::ColorButtonBackground);
+  pDC->SetBkColor(bkcolor);
+  pDC->FillSolidRect(client,bkcolor);
+}
+
+//////////////////////////////////////////////////////////////////////////
+//
 // StyleListCtrl
+//
+IMPLEMENT_DYNAMIC(StyleListCtrl,CMFCListCtrl);
 
 StyleListCtrl::StyleListCtrl()
 {
@@ -46,6 +209,7 @@ BEGIN_MESSAGE_MAP(StyleListCtrl,CMFCListCtrl)
   ON_WM_CREATE()
   ON_WM_PAINT()
   ON_WM_SIZE()
+  ON_WM_ERASEBKGND()
   ON_WM_SHOWWINDOW()
 END_MESSAGE_MAP()
 
@@ -60,10 +224,40 @@ StyleListCtrl::PreSubclassWindow()
   }
 }
 
+CMFCHeaderCtrl& 
+StyleListCtrl::GetHeaderCtrl() 
+{ 
+  return m_styleHeader; 
+}
+
 void
 StyleListCtrl::SetDirectInit(bool p_init)
 {
   m_directInit = p_init;
+}
+
+// Default string comparison sort
+int 
+StyleListCtrl::OnCompareItems(LPARAM lParam1,LPARAM lParam2,int iColumn)
+{
+  int lower = (int)(lParam1 < lParam2 ? lParam1 : lParam2);
+  int upper = (int)(lParam1 < lParam2 ? lParam2 : lParam1);
+  CString first  = GetItemText(lower,iColumn);
+  CString second = GetItemText(upper,iColumn);
+
+  return first.CompareNoCase(second);
+}
+
+COLORREF 
+StyleListCtrl::OnGetCellTextColor(int p_row,int p_colum)
+{
+  return ThemeColor::GetColor(Colors::ColorEditText);
+}
+
+COLORREF 
+StyleListCtrl::OnGetCellBkColor(int p_row,int p_colum)
+{
+  return ThemeColor::GetColor(Colors::ColorEditBkgnd);
 }
 
 /////////////////////////////////////////////////////////////////////////////
@@ -155,24 +349,13 @@ StyleListCtrl::DrawFrame()
   }
 }
 
-void
-StyleListCtrl::CheckColors()
+BOOL
+StyleListCtrl::OnEraseBkgnd(CDC* pDC)
 {
-  int background = ThemeColor::GetColor(Colors::ColorCtrlBackground);
-  int textcolor  = ThemeColor::GetColor(Colors::ColorEditText);
-
-  if(GetBkColor() != background)
-  {
-    SetBkColor(background);
-  }
-  if(GetTextBkColor() != background)
-  {
-    SetTextBkColor(background);
-  }
-  if(GetTextColor() != textcolor)
-  {
-    SetTextColor(textcolor);
-  }
+  CRect client;
+  GetClientRect(client);
+  pDC->FillSolidRect(client,ThemeColor::GetColor(Colors::ColorCtrlBackground));
+  return TRUE;
 }
 
 void
@@ -181,7 +364,6 @@ StyleListCtrl::OnPaint()
   if(!m_inPaint)
   {
     m_inPaint = true;
-    CheckColors();
     CMFCListCtrl::OnPaint();
     DrawFrame();
     m_inPaint = false;
