@@ -199,7 +199,7 @@ BEGIN
     EDITTEXT        IDC_EDIT,7,7,244,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Add",IDC_ADD,264,7,64,14
     LISTBOX         IDC_LIST1,7,25,158,222,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    LISTBOX         IDC_LIST2,170,25,158,222,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP,WS_EX_CLIENTEDGE
+    LISTBOX         IDC_LIST2,170,25,158,222,LBS_NOINTEGRALHEIGHT | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP,WS_EX_CLIENTEDGE
     PUSHBUTTON      "&Empty",IDC_LEGEN,7,251,67,14
     DEFPUSHBUTTON   "OK",IDOK,181,251,71,14
     PUSHBUTTON      "Cancel",IDCANCEL,258,251,70,14
