@@ -10,6 +10,13 @@
 //
 // RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES
 
+VERSION OF 02-02-2023
+---------------------
+1) StyleListBox now knows how to sort it's items
+2) Header control of StyleListBox fixed. Also works in the 'Dark Theme'
+3) ListBoxes need no longer to be OWNERDRAWFIXED. Regular listboxes from the 
+   standard resources will now work exactly the same
+
 VERSION OF 21-01-2023
 ---------------------
 1) Added the StyleTab for replacament of StyleDialog in a Tab-control
